test/fail/io/write_to_closed.lly
#[
IOError: IO operation on closed file.
Traceback:
    File "[builtin]", from file::write
    File "write_to_closed.lly", from __main__ at line 10
]#

var f = file::open("io_test_file.txt", "w")
f.close()
f.write("1234")
